cmake_minimum_required (VERSION 2.8)

set(DEPS_DIR ${PROJECT_SOURCE_DIR}/deps)
set(PROTOBUF_DIR ${DEPS_DIR}/protobuf-3.6.1)
set(TCMALLOC_DIR ${DEPS_DIR}/gperftools-2.7)
set(RAPIDXML_DIR ${DEPS_DIR}/rapidxml-1.13)
set(RAPIDJSON_DIR ${DEPS_DIR}/rapidjson-1.1.0)
set(MYSQL_DIR ${DEPS_DIR}/mysql-5.6.37)
set(LIBEVENT_DIR ${DEPS_DIR}/libevent-2.1.8)
set(LUA_DIR ${DEPS_DIR}/luajit-2.0.5)
set(CURL_DIR ${DEPS_DIR}/curl-7.58.0)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(server/gatewayserver)
#ADD_SUBDIRECTORY(server/recordserver)
#ADD_SUBDIRECTORY(server/logserver)
#ADD_SUBDIRECTORY(tests)
